--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="first-part">
+        <div class="header">
+            <div class="header-logo">Header Logo</div>
+            <div class="header-links">
+                <a href="https://www.theodinproject.com/">Odin Project</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </div>
+        </div>
+        <div class="main-header">
+            <div class="main-square">
+                <div class="main-title">This website is awesome</div>
+                <div class="main-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button class="sign-up-button">Sign up</button>
+            </div>
+            <div class="placeholder">this is a placeholder for an image</div>
+        </div>
+    </div>
 </body>
 </html>
