Add second part elements

--- a/index.html
+++ b/index.html
@@ -25,5 +25,26 @@
             <div class="placeholder">this is a placeholder for an image</div>
         </div>
     </div>
+    <div class="second-part">
+        <div class="subtitle">Some random information.</div>
+        <div class="illustrative-texts">
+            <div class="illustrative-text">
+                <div class="illustrative-placeholder"></div>
+                <div class="illustrative-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="illustrative-text">
+                <div class="illustrative-placeholder"></div>
+                <div class="illustrative-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="illustrative-text">
+                <div class="illustrative-placeholder"></div>
+                <div class="illustrative-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="illustrative-text">
+                <div class="illustrative-placeholder"></div>
+                <div class="illustrative-text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
