Add fourth part elements and footer

--- a/index.html
+++ b/index.html
@@ -52,5 +52,15 @@
             looks nice.</div>
             <div class="author">-Thor, God of Thunder</div>
     </div>
+    <div class="fourth part">
+        <div class="modal">
+            <div class="modal-text">
+                <div class="modal-title">Call to action! It's time!</div>
+                <div class="modal-subtext">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="sign-up-button second-button">Sign up</button>
+        </div>
+    </div>
+    <footer class="footer">Copyright © The Odin Project 2022</footer>
 </body>
 </html>
