--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="first-part">
         <div class="header">
             <div class="header-logo">Header Logo</div>
-            <div class="header-links">
-                <a href="https://www.theodinproject.com/">Odin Project</a>
-                <a href="#">header link two</a>
-                <a href="#">header link three</a>
-            </div>
+            <ul class="header-links">
+                <li><a href="https://www.theodinproject.com/">Odin Project</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
         </div>
         <div class="main-header">
             <div class="main-square">
