--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 </head>
 <body>
     <div class="first-part">
-        <div class="header">
-            <div class="header-logo">Header Logo</div>
-            <ul class="header-links">
-                <li><a href="https://www.theodinproject.com/">Odin Project</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </div>
-        <div class="main-header">
-            <div class="main-square">
-                <div class="main-title">This website is awesome</div>
-                <div class="main-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <button class="sign-up-button">Sign up</button>
+        <div class="header-and-main-header">
+            <div class="header">
+                <div class="header-logo">Header Logo</div>
+                <ul class="header-links">
+                    <li><a href="https://www.theodinproject.com/">Odin Project</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
             </div>
-            <div class="placeholder">this is a placeholder for an image</div>
+            <div class="main-header">
+                <div class="main-square">
+                    <div class="main-title">This website is awesome</div>
+                    <div class="main-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                    <button class="sign-up-button">Sign up</button>
+                </div>
+                <div class="placeholder">this is a placeholder for an image</div>
+            </div>
         </div>
     </div>
     <div class="second-part">
