--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
             </div>
             <div class="main-header">
                 <div class="main-square">
-                    <div class="main-title">This website is awesome</div>
-                    <div class="main-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                    <div class="main-title-and-main-subtext">
+                        <div class="main-title">This website is awesome</div>
+                        <div class="main-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                    </div>   
                     <button class="sign-up-button">Sign up</button>
                 </div>
                 <div class="placeholder">this is a placeholder for an image</div>
