Replace class name

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
     <div class="second-part">
         <div class="subtitle">Some random information.</div>
         <div class="illustrative-texts">
-            <div class="illustrative-text">
+            <div class="illustration-and-text">
                 <div class="illustrative-placeholder"></div>
                 <div class="illustrative-text">this is some subtext under an illustration or image</div>
             </div>
-            <div class="illustrative-text">
+            <div class="illustration-and-text">
                 <div class="illustrative-placeholder"></div>
                 <div class="illustrative-text">this is some subtext under an illustration or image</div>
             </div>
-            <div class="illustrative-text">
+            <div class="illustration-and-text">
                 <div class="illustrative-placeholder"></div>
                 <div class="illustrative-text">this is some subtext under an illustration or image</div>
             </div>
-            <div class="illustrative-text">
+            <div class="illustration-and-text">
                 <div class="illustrative-placeholder"></div>
                 <div class="illustrative-text">this is some subtext under an illustration or image</div>
             </div>
