--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="third-part">
-        <div class="quote-&-author">
+        <div class="quote-and-author">
             <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that 
             looks nice.</div>
             <div class="author">-Thor, God of Thunder</div>
