--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="author">-Thor, God of Thunder</div>
         </div>
     </div>
-    <div class="fourth part">
+    <div class="fourth-part">
         <div class="modal">
             <div class="modal-text">
                 <div class="modal-title">Call to action! It's time!</div>
