--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                     </div>   
                     <button class="sign-up-button">Sign up</button>
                 </div>
-                <div class="placeholder">this is a placeholder for an image</div>
+                <div class="placeholder">
+                    <img id="fujinomiya-japan" src="https://images.pexels.com/photos/3408354/pexels-photo-3408354.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Fujinomiya, Japan">
+                </div>
             </div>
         </div>
     </div>
