--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <div class="first-part">
         <div class="header-and-main-header">
             <div class="header">
-                <div class="header-logo">Header Logo</div>
+                <div class="header-logo">Japan for everyone</div>
                 <ul class="header-links">
                     <li><a href="https://www.theodinproject.com/">Odin Project</a></li>
-                    <li><a href="#">header link two</a></li>
+                    <li><a href="https://www.tofugu.com/learn-japanese/">Learn japanese</a></li>
                     <li><a href="#">header link three</a></li>
                 </ul>
             </div>
             <div class="main-header">
                 <div class="main-square">
                     <div class="main-title-and-main-subtext">
-                        <div class="main-title">This website is awesome</div>
+                        <div class="main-title">Travel to Japan during Covid-19</div>
                         <div class="main-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                     </div>   
                     <button class="sign-up-button">Sign up</button>
