Add subtext information for the first part

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <div class="main-square">
                     <div class="main-title-and-main-subtext">
                         <div class="main-title">Travel to Japan during Covid-19</div>
-                        <div class="main-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                        <div class="main-subtext"> Coronavirus cases remain high across the globe. Health officials caution that travel increases your chances of getting and spreading 
+                            the virus. Staying home is the best way to stem transmission. Below is information on what to know if you still plan to travel</div>
                     </div>   
                     <button class="sign-up-button">Sign up</button>
                 </div>
