--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul class="header-links">
                     <li><a href="https://www.theodinproject.com/">Odin Project</a></li>
                     <li><a href="https://www.tofugu.com/learn-japanese/">Learn japanese</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li><a href="https://www.japan.travel/en/">Travel to Japan</a></li>
                 </ul>
             </div>
             <div class="main-header">
@@ -23,7 +23,7 @@
                     <div class="main-title-and-main-subtext">
                         <div class="main-title">Travel to Japan during Covid-19</div>
                         <div class="main-subtext"> Coronavirus cases remain high across the globe. Health officials caution that travel increases your chances of getting and spreading 
-                            the virus. Staying home is the best way to stem transmission. Below is information on what to know if you still plan to travel</div>
+                            the virus. Staying home is the best way to stem transmission. </div>
                     </div>   
                     <button class="sign-up-button">Sign up</button>
                 </div>
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="second-part">
-        <div class="subtitle">Some random information.</div>
+        <div class="subtitle">The basics</div>
         <div class="illustrative-texts">
             <div class="illustration-and-text">
                 <div class="illustrative-placeholder"></div>
