Add first information and image for the 2° part

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         <div class="subtitle">The basics</div>
         <div class="illustrative-texts">
             <div class="illustration-and-text">
-                <div class="illustrative-placeholder"></div>
-                <div class="illustrative-text">this is some subtext under an illustration or image</div>
+                <div class="illustrative-placeholder"><img src="https://images.pexels.com/photos/3970330/pexels-photo-3970330.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" 
+                    id="coronavirus-statistics" alt="Coronavirus statistics"></div>
+                <div class="illustrative-text">Japan was initially lauded for containing the virus during the first wave but has since seen several surges in cases.</div>
             </div>
             <div class="illustration-and-text">
                 <div class="illustrative-placeholder"></div>
