Add second image and information for the 2° part

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
                 <div class="illustrative-text">Japan was initially lauded for containing the virus during the first wave but has since seen several surges in cases.</div>
             </div>
             <div class="illustration-and-text">
-                <div class="illustrative-placeholder"></div>
-                <div class="illustrative-text">this is some subtext under an illustration or image</div>
+                <div class="illustrative-placeholder"><img src="https://images.pexels.com/photos/3992933/pexels-photo-3992933.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" 
+                    id="coronavirus" alt="coronavirus"></div>
+                <div class="illustrative-text">Following the identification of the new Omicron variant of the coronavirus, Japan shut its borders to all foreigners.</div>
             </div>
             <div class="illustration-and-text">
                 <div class="illustrative-placeholder"></div>
