Replace id with classes at the second part

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <div class="illustrative-texts">
             <div class="illustration-and-text">
                 <div class="illustrative-placeholder"><img src="https://images.pexels.com/photos/3970330/pexels-photo-3970330.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" 
-                    id="coronavirus-statistics" alt="Coronavirus statistics"></div>
+                    class="coronavirus-statistics" alt="Coronavirus statistics"></div>
                 <div class="illustrative-text">Japan was initially lauded for containing the virus during the first wave but has since seen several surges in cases.</div>
             </div>
             <div class="illustration-and-text">
                 <div class="illustrative-placeholder"><img src="https://images.pexels.com/photos/3992933/pexels-photo-3992933.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" 
-                    id="coronavirus" alt="coronavirus"></div>
+                    class="coronavirus" alt="coronavirus"></div>
                 <div class="illustrative-text">Following the identification of the new Omicron variant of the coronavirus, Japan shut its borders to all foreigners.</div>
             </div>
             <div class="illustration-and-text">
