Add third image and information to the second part

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
                 <div class="illustrative-text">Following the identification of the new Omicron variant of the coronavirus, Japan shut its borders to all foreigners.</div>
             </div>
             <div class="illustration-and-text">
-                <div class="illustrative-placeholder"></div>
-                <div class="illustrative-text">this is some subtext under an illustration or image</div>
+                <div class="illustrative-placeholder"><img src="https://images.pexels.com/photos/1829977/pexels-photo-1829977.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
+                class="foreign" alt="foreign-on-japan"></div>
+                <div class="illustrative-text">Foreign residents of Japan, even if they have residency, who travel to Angola, Botswana, Eswatini, Lesotho, Malawi, Mozambique, 
+                    Namibia, etc; will not be allowed.</div>
             </div>
             <div class="illustration-and-text">
                 <div class="illustrative-placeholder"></div>
