Add fourth image and information to the 2° part

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
                     Namibia, etc; will not be allowed.</div>
             </div>
             <div class="illustration-and-text">
-                <div class="illustrative-placeholder"></div>
-                <div class="illustrative-text">this is some subtext under an illustration or image</div>
+                <div class="illustrative-placeholder"><img src="https://images.pexels.com/photos/4050315/pexels-photo-4050315.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
+                class="student" alt="Student"></div>
+                <div class="illustrative-text">On January 17, the health ministry announced that it would allow 87 international students to enter Japan sometime in late 
+                    January or early February.</div>
             </div>
         </div>
     </div>
