--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     </div>
     <div class="third-part">
         <div class="quote-and-author">
-            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that 
-            looks nice.</div>
-            <div class="author">-Thor, God of Thunder</div>
+            <div class="quote">“Resumption of cross-border travel is also indispensable for economic recovery. Japan will resume global economic activities while 
+                thoroughly implementing preventive measures against infection.”</div>
+            <div class="author">-Prime Minister of Japan at the APEC CEO Dialogues</div>
         </div>
     </div>
     <div class="fourth-part">
