Add call to action description

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <div class="fourth-part">
         <div class="modal">
             <div class="modal-text">
-                <div class="modal-title">Call to action! It's time!</div>
-                <div class="modal-subtext">Sign up for our product by clicking that button right over there!</div>
+                <div class="modal-title">Do you want to know more about Japan?</div>
+                <div class="modal-subtext">Sign up for our product and receive notifications when an article is posted!</div>
             </div>
             <button class="sign-up-button second-button">Sign up</button>
         </div>
